--- a/mario/css/base.css
+++ b/mario/css/base.css
@@ -97,7 +97,7 @@ input {
 label {
     position: absolute;
     top: 50%;
-    left: 50vw;
+    left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     font-size: 30px;
